; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/console/extr_mdacon.c_mdacon_putcs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/console/extr_mdacon.c_mdacon_putcs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vc_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vc_data*, i16*, i32, i32, i32)* @mdacon_putcs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mdacon_putcs(%struct.vc_data* %0, i16* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.vc_data*, align 8
  %7 = alloca i16*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store %struct.vc_data* %0, %struct.vc_data** %6, align 8
  store i16* %1, i16** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i32, i32* %10, align 4
  %13 = load i32, i32* %9, align 4
  %14 = call i32* @MDA_ADDR(i32 %12, i32 %13)
  store i32* %14, i32** %11, align 8
  br label %15

15:                                               ; preds = %28, %5
  %16 = load i32, i32* %8, align 4
  %17 = icmp sgt i32 %16, 0
  br i1 %17, label %18, label %31

18:                                               ; preds = %15
  %19 = load i16*, i16** %7, align 8
  %20 = getelementptr inbounds i16, i16* %19, i32 1
  store i16* %20, i16** %7, align 8
  %21 = ptrtoint i16* %19 to i32
  %22 = call i32 @scr_readw(i32 %21)
  %23 = call i32 @mda_convert_attr(i32 %22)
  %24 = load i32*, i32** %11, align 8
  %25 = getelementptr inbounds i32, i32* %24, i32 1
  store i32* %25, i32** %11, align 8
  %26 = ptrtoint i32* %24 to i32
  %27 = call i32 @scr_writew(i32 %23, i32 %26)
  br label %28

28:                                               ; preds = %18
  %29 = load i32, i32* %8, align 4
  %30 = add nsw i32 %29, -1
  store i32 %30, i32* %8, align 4
  br label %15

31:                                               ; preds = %15
  ret void
}

declare dso_local i32* @MDA_ADDR(i32, i32) #1

declare dso_local i32 @scr_writew(i32, i32) #1

declare dso_local i32 @mda_convert_attr(i32) #1

declare dso_local i32 @scr_readw(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
